test/libsolidity/syntaxTests/storageLayoutSpecifier/address_constant.sol
address constant x = 0xdCad3a6d3569DF655070DEd06cb7A1b2Ccd1D3AF;
contract C layout at x {

}
// ----
// TypeError 6396: (86-87): The base slot of the storage layout must evaluate to a rational number.
